[package]
name = "easypls"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "easypls"
crate-type = ["cdylib", "rlib"]

[dependencies]
criterion = "0.8.1"
pyo3 = "0.27.0"

[[bench]]
name = "benches"
harness = false
